* Changed tags: <txp:article /> and <txp:article_custom /> allow new attributes 'wraptag', 'break'
* Changed tags: <txp:category /> and <txp:section /> apply the 'class' attribute to the <A> element when wraptag is empty.
* XML-RPC server
* User-selectable plugin run order
* Concurrent article edit warning
* WYSIWYG preview for draft articles
* More verbose "First Post" article with basic instructions and helpful links.
* Developer: getTree() receives an optional 'table' name, returned array contains 'parent' field.
* Developer: New event 'pretext_set'.
* jQuery 1.2.6

Changes in 4.0.6

* Security: add missing escape in SQL query (admin side)
* Security: safer use of txp_login cookie + nonce (note: users are logged out after upgrading!)
* Security: fixed XSS vulnerability (thanks DSecRG) and input validation in setup script.
* Security: fixed local file include vulnerability (publisher only) in textpattern/index.php (thanks DSecRG and Victor)
* Security: fixed XSS vulnerability and parameter value overflow in comments preview (thanks DSecRG)
* Security: escape request method as shown on logs tab (thanks Victor)
* Changed tag: <txp:thumbnail /> allows non-JS links to the full-size image
* Changed tag: <txp:article_custom /> allows comma-separated lists for category, section and author attributes (thanks Manfre)
* Changed tag: <txp:linklist /> allows comma-separated list for category attribute
* Changed tag: <txp:file_download_list /> allows comma-separated list for category attribute
* Changed tag: <txp:recent_articles /> allows comma-separated lists for category and section attribute
* Changed tag: <txp:related_articles /> allows comma-separated list for section attribute
* Changed tag: <txp:search_result_excerpt /> allows a custom "break" attribute defaulting to an ellipsis
* Deprecated tag: <txp:sitename /> replaced by <txp:site_name />
* Deprecated tag: <txp:request_uri /> replaced by <txp:page_url />