@@ -14,6 +14,7 @@ Changes in 4.0.7
 * User-selectable plugin run order
 * Concurrent article edit warning
 * WYSIWYG preview for draft articles
+* Added article images and keywords to the the article list's search criteria.
 * More verbose "First Post" article with basic instructions and helpful links.
 * Developer: getTree() receives an optional 'table' name, returned array contains 'parent' field.
 * Developer: New event 'pretext_set'.
